--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "next": "latest",
+    "next-sanity": "^1.0.0",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
