--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.13",
+    "@sanity/client": "^3.4.1",
+    "@sanity/image-url": "^1.0.1",
+    "formik": "^2.2.9",
     "next": "latest",
     "next-sanity": "^1.0.0",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-hook-form": "^7.37.0",
+    "react-portable-text": "^0.5.1"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
