--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.10.13",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.4",
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
     "formik": "^2.2.9",
-    "next": "latest",
-    "next-sanity": "^1.0.0",
+    "next": "12",
+    "next-sanity": "^1.1.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.37.0",
@@ -25,7 +27,6 @@
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.2",
     "typescript": "4.7.2"
   }
 }
