--- a/Back/package.json
+++ b/Back/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@sanity/client": "^4.0.1",
     "cohere-ai": "^5.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
